# credentials_to_env

./: .gitignore  .travis.yml  Cargo.toml  Dockerfile  Makefile  README.md  build-release
src/: chmod.rs  exec.rs  main.rs
