[package]
authors = ["Eric Kidd <git@randomhacks.net>"]
description = "Fetch secrets from Hashicorp's Vault and write to environment or files, then exec another program"
license = "MIT/Apache-2.0"
name = "credentials_to_env"
readme = "README.md"
repository = "https://github.com/faradayio/credentials_to_env"
version = "0.2.1"

[[bin]]
name = "credentials-to-env"

[dependencies]
credentials = "0.2.1"
errno = "0.1.6"
libc = "0.2.8"
