[package]
authors = ["Eric Kidd <git@randomhacks.net>"]
description = "Fetch secrets from Hashicorp's Vault and write to environment or files, then exec another program"
license = "MIT/Apache-2.0"
name = "credentials_to_env"
readme = "README.md"
repository = "https://github.com/faradayio/credentials_to_env"
version = "0.4.2"

[[bin]]
name = "credentials-to-env"

[dependencies]
credentials = "0.4.0"
exec = "0.2.0"

[features]
unstable = []
