[package]
authors = ["Eric Kidd <git@randomhacks.net>"]
description = "Fetch secrets from Hashicorp's Vault and write to environment or files, then exec another program"
license = "MIT/Apache-2.0"
name = "credentials_to_env"
readme = "README.md"
repository = "https://github.com/faradayio/credentials_to_env"
version = "0.4.8"
autobins = false

[[bin]]
name = "credentials-to-env"
path = "src/main.rs"

[dependencies]
common_failures = "0.1"
credentials = "0.10"
exec = "0.3"
failure = "0.1.2"

[features]
unstable = []
